Fixed the image above the menu to not bleed into the main body of the site at lower screen sizes

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,10 @@
     outline: 1px solid;
     background-color: #bcbcbc;
 }
+.logo img
+{
+    width: 100%;
+}
 #cart_summary
 {
     text-align: center;
